--- a/css/all.css
+++ b/css/all.css
@@ -41,7 +41,6 @@ body {
 	width: 100%;
 	color: #727272;
 	background: #4e85b5 url(../images/bg-main.jpg) no-repeat;
-	-webkit-background-size: cover;
 	background-size: cover;
 }
 
@@ -72,8 +71,16 @@ fieldset {
 	display: -moz-flex;
 	display: -ms-flex;
 	display: -o-flex;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
+	-webkit-box-align: center;
+	-webkit-align-items: center;
+	-ms-flex-align: center;
 	align-items: center;
+	-webkit-box-pack: center;
+	-webkit-justify-content: center;
+	-ms-flex-pack: center;
 	justify-content: center;
 	height: 100%;
 	width: 100%;
@@ -113,6 +120,7 @@ fieldset {
 	width: 33%;
 	padding: 30px 0 29px 1.2%;
 	min-width: 430px;
+	-webkit-box-sizing: border-box;
 	box-sizing: border-box;
 }
 
@@ -206,6 +214,7 @@ fieldset {
 	padding: 11px 50px 10px 21px;
 	font-size: .7vw;
 	line-height: 16px;
+	-webkit-box-sizing: border-box;
 	box-sizing: border-box;
 	border: none;
 	border-radius: 4px;
@@ -224,6 +233,7 @@ fieldset {
 	top: 0;
 	right: 0;
 	background: #4084c1 url(../images/btn-icon.png) no-repeat 50% 50% ;
+	-webkit-transition: background-color .3s linear;
 	transition: background-color .3s linear;
 	border-radius: 0 4px 4px 0;
 }
@@ -238,6 +248,8 @@ fieldset {
 	bottom: 0;
 	left: 50%;
 	width: 100%;
+	-webkit-transform: translate(-50%);
+	-ms-transform: translate(-50%);
 	transform: translate(-50%);
 }
 
@@ -304,6 +316,7 @@ fieldset {
 	height: 34px;
 	opacity: 0;
 	background: url(../images/social-sprite.png) no-repeat 0 -34px;
+	-webkit-transition: opacity .3s linear;
 	transition: opacity .3s linear;
 }
 
