--- a/css/all.css
+++ b/css/all.css
@@ -108,7 +108,7 @@ fieldset {
 
 .image-box img{
 	display: block;
-	width: 100%;
+	width: 100.5%;
 	height: 100%;
 }
 
@@ -192,6 +192,10 @@ fieldset {
 	border-style: none;
 }
 
+form.success input::-webkit-input-placeholder {
+    color: green;
+}
+
 .form-group {
 	position: relative;
 	width: 218px;
@@ -211,7 +215,7 @@ fieldset {
 .hold-form input {
 	width: 218px;
 	background: #ebebeb;
-	padding: 11px 50px 10px 21px;
+	padding: 11px 40px 10px 21px;
 	font-size: .7vw;
 	line-height: 16px;
 	-webkit-box-sizing: border-box;
